--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="style.css">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
         <section id="firstSide">
@@ -19,6 +20,16 @@
                     <a href="#"> Explore More </a>
                 </div>
             </article>
+        </section>
+
+        <section id="inputContainer">
+            <div>
+                <input type="text" id="movie" placeholder="What country do you search for?">
+                <button type="submit">
+                    <i class="fa fa-search"></i>
+                </button>
+                <div id="borderBottomEffect"></div>
+            </div>
         </section>
 
         <script type="module" src="script.js"></script>
