Added border-bottom effect on input

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
     <head>
         <title> COVID-19 tracking </title>
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
         <section id="firstSide">
@@ -28,6 +28,7 @@
                 <button type="submit">
                     <i class="fa fa-search"></i>
                 </button>
+                <div id="borderBottomEffect"></div>
             </div>
         </section>
 
