Created interface for global corona info + retrieved data from api

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
             </article>
         </section>
 
+        <section id="globalInfo"></section>
+
         <section id="inputContainer">
             <div>
                 <input type="text" list="countryList" id="countryInput" placeholder="What country do you search for?">
