--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
         </section>
 
         <section id="inputContainer">
-            <div>
+            <div data-aos="fade-right" data-aos-duration="400" data-aos-delay="900">
                 <input type="text" list="countryList" id="countryInput" placeholder="What country do you search for?">
                 <button type="submit">
                     <i class="fa fa-search"></i>
                 </button>
                 <div id="borderBottomEffect"></div>
             </div>
-            <div id="countryList"></div>
+            <div id="countryList" data-aos="fade-right" data-aos-duration="400" data-aos-delay="900"></div>
         </section>
 
         <script src="../node_modules/jquery/dist/jquery.js"></script>
