Created loader interface

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
+        <div id="loaderForAPI">
+            <p> Loading... </p>
+        </div>
+
         <section id="firstSide">
             <div id="switcher">
                 <div id="roundButton"></div>
