--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
                 <div id="roundButton"></div>
             </div>
             <article class="content">
-                <img src="img/dark.png">
-                <p> COVID-19 </p>
-                <h3> Find necessary information about the new coronavirus in your country. Through an easy interface. </h3>
-                <div id="block">
+                <img src="img/dark.png" class="lax">
+                <p class="lax" data-lax-preset="speedy"> COVID-19 </p>
+                <h3 class="lax" data-lax-preset="speedy"> Find necessary information about the new coronavirus in your country. Through an easy interface. </h3>
+                <div id="block" class="lax">
                     <a href="#"> Explore More </a>
                 </div>
             </article>
@@ -40,6 +40,7 @@
         </section>
 
         <script src="../node_modules/jquery/dist/jquery.js"></script>
+        <script src="../node_modules/lax.js/lib/lax.min.js"></script>
         <script src="../node_modules/aos/dist/aos.js"></script>
         <script> AOS.init(); </script>
         <script type="module" src="script.js"></script>
