Changed Lax.js animations

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
                 <div id="roundButton"></div>
             </div>
             <article class="content">
-                <img src="img/dark.png" class="lax">
-                <p class="lax" data-lax-preset="speedy"> COVID-19 </p>
-                <h3 class="lax" data-lax-preset="speedy"> Find necessary information about the new coronavirus in your country. Through an easy interface. </h3>
-                <div id="block" class="lax">
+                <img src="img/dark.png">
+                <p class="lax" data-lax-preset="blurOut"> COVID-19 </p>
+                <h3 class="lax" data-lax-preset="driftRight"> Find necessary information about the new coronavirus in your country. Through an easy interface. </h3>
+                <div id="block" class="lax" data-lax-preset="blurOut">
                     <a href="#"> Explore More </a>
                 </div>
             </article>
