--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
         <link rel="icon" href="img/covid.png">
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="./node_modules/font-awesome/css/font-awesome.min.css">
-        <link rel="stylesheet" href="./node_modules/aos/dist/aos.css">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
@@ -20,29 +19,26 @@
             </div>
             <article class="content">
                 <img src="img/dark.png">
-                <p class="lax" data-lax-preset="blurOut"> COVID-19 </p>
-                <h3 class="lax" data-lax-preset="driftRight"> Find necessary information about the new coronavirus in your country. Through an easy interface. </h3>
-                <div id="block" class="lax" data-lax-preset="blurOut">
+                <p> COVID-19 </p>
+                <h3> Find necessary information about the new coronavirus in your country. Through an easy interface. </h3>
+                <div id="block">
                     <a href="#"> Explore More </a>
                 </div>
             </article>
         </section>
 
         <section id="inputContainer">
-            <div data-aos="fade-right" data-aos-duration="400" data-aos-delay="900">
+            <div>
                 <input type="text" list="countryList" id="countryInput" placeholder="What country do you search for?">
                 <button type="submit">
                     <i class="fa fa-search"></i>
                 </button>
                 <div id="borderBottomEffect"></div>
             </div>
-            <div id="countryList" data-aos="fade-right" data-aos-duration="400" data-aos-delay="900"></div>
+            <div id="countryList"></div>
         </section>
 
         <script src="../node_modules/jquery/dist/jquery.js"></script>
-        <script src="../node_modules/lax.js/lib/lax.min.js"></script>
-        <script src="../node_modules/aos/dist/aos.js"></script>
-        <script> AOS.init(); </script>
         <script type="module" src="script.js"></script>
     </body>
 </html>
