Changed structure to work with Node.js (for Heroku)

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
     <head>
         <title> COVID-19 tracking </title>
-        <link rel="icon" href="img/covid.png">
-        <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" href="./node_modules/font-awesome/css/font-awesome.min.css">
+        <link rel="icon" href="static/img/covid.png">
+        <link rel="stylesheet" type="text/css" href="static/css/style.css">
+        <script src="https://use.fontawesome.com/cb4f7f9f1d.js"></script>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
@@ -18,7 +18,7 @@
                 <div id="roundButton"></div>
             </div>
             <article class="content">
-                <img src="img/dark.png">
+                <img src="static/img/dark.png">
                 <p> COVID-19 </p>
                 <h3> Find necessary information about the new coronavirus in your country. Through an easy interface. </h3>
                 <div id="block">
@@ -38,7 +38,7 @@
             <div id="countryList"></div>
         </section>
 
-        <script src="../node_modules/jquery/dist/jquery.js"></script>
-        <script type="module" src="script.js"></script>
+        <script src="static/js/jquery.js"></script>
+        <script type="module" src="static/js/script.js"></script>
     </body>
 </html>
